--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
 ▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
 Welcome in my personal website 100% HTML Hosted by Github
-Handcrafted With ❤ (CC)-By: Alexandros Papaspyrou V.08.07.19
+Handcrafted With ❤ (CC)-By: Alexandros Papaspyrou V.14.07.19
 ┌─┐┬  ┌─┐─┐ ┬┌─┐┌┐┌┌┬┐┬─┐┌─┐┌─┐┬ ┬┬ ┬┌┐  ┌─┐┬┌┬┐┬ ┬┬ ┬┌┐  ┬┌─┐
 ├─┤│  ├┤ ┌┴┬┘├─┤│││ ││├┬┘│ │└─┐├─┤│ │├┴┐ │ ┬│ │ ├─┤│ │├┴┐ ││ │
 ┴ ┴┴─┘└─┘┴ └─┴ ┴┘└┘─┴┘┴└─└─┘└─┘┴ ┴└─┘└─┘o└─┘┴ ┴ ┴ ┴└─┘└─┘o┴└─┘
@@ -126,12 +126,11 @@ if (i < txt.length) {  document.getElementById("demo").innerHTML += txt.charAt(i
   <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
  
 <!-- Dashboard --><a href=" https://alexandroshub.github.io/vip.dashboard.html " title="Dashboard"><i class="fa fa-pencil-square-o"></i></a>
-<!-- support --><a href=" https://alexandroshub.github.io/support.html " title="support"><i class="fa fa-support"></i></a> 
-<!-- android --><a style="text-decoration: none" onclick="on()"title="android"><i class="fa fa-android"></i></a> 
+<!-- android --><a style="text-decoration: none" onclick="on()"title="APP"><i class="fa fa-android"></i></a> 
 <!-- About --><a href=" https://alexandroshub.github.io/about " title="About"><i class="fa fa-info-circle"></i></a> | 
-<!-- twitter --><a href=" https://twitter.com/A_Papaspyrou" title="twitter"><i class="fa fa-twitter"></i></a>
+<!-- twitter --><a href=" https://twitter.com/A_Papaspyrou" title="Twitter"><i class="fa fa-twitter"></i></a>
 <!-- facebook -->
-<a href="https://www.facebook.com/papaspyrou.a" title="facebook"><i class="fa fa-facebook-f"></i></a>
+<a href="https://www.facebook.com/papaspyrou.a" title="Facebook"><i class="fa fa-facebook-f"></i></a>
 <!-- linkedin -->
 <a href="https://gr.linkedin.com/in/alexandrospapaspyrou" title="Linkedin"><i class="fa fa-linkedin"></i></a> | 
 <!-- Signature --><img src= "https://78.media.tumblr.com/e3d4fac4931e6e1df6b3b85d53dae92b/tumblr_p0sxo3UYRB1si59zfo1_1280.png" style="width:270px;" alt="Signature" align="bottom">
@@ -262,10 +261,10 @@ Files & Publications</div>
   <footer class="w3-container w3-padding-32 w3-dark-grey">
   <div class="w3-row-padding">
     <div class="w3-third">
-      <img src="https://66.media.tumblr.com/fb287d1352f741032dd4b1e2a49ecc77/tumblr_phxnkoY5KO1si59zfo1_400.png" style="width:100px;">
-       <h3>About</h3>
-
-  <a href="https://alexandroshub.github.io/about">Privacy Statement & Terms of Use</a>
+       <h3>Share</h3><!-- Go to www.addthis.com/dashboard to customize your tools -->
+       <div class="addthis_inline_share_toolbox"></div>
+       <h3>About</h3>         
+       <a href="https://alexandroshub.github.io/about">Privacy Statement & Terms of Use</a>
   </div>
   
     <div class="w3-third">
@@ -308,13 +307,13 @@ Files & Publications</div>
 <footer class="w3-center w3-black w3-padding-16">
 <!-- top --> 
 <a href="#home" class="w3-button"><i class="fa fa-chevron-circle-up w3-margin-right"></i>Επιστροφή στην κορυφή</a>
-  <div class="w3-xlarge w3-section"></div>
-  <!-- twitter --><a href=" https://twitter.com/A_Papaspyrou" title="Twitter"><i class="fa fa-twitter w3-hover-opacity"></i></a>
+  <div class="w3-xlarge w3-section"></div>    
+
   <!-- facebook -->
   <a href="https://www.facebook.com/papaspyrou.a" title="Facebook"><i class="fa fa-facebook-f w3-hover-opacity">
   </i></a> 
   <!-- contact -->
-  <a href="https://alexandroshub.github.io/contact.html" title="contact"><i class=" fa fa-envelope w3-hover-opacity">
+  <a href="https://alexandroshub.github.io/contact.html" title="Contact Me"><i class=" fa fa-envelope w3-hover-opacity">
   </i></a> 
   | 
   <!-- Signature --><img src= "https://78.media.tumblr.com/e3d4fac4931e6e1df6b3b85d53dae92b/tumblr_p0sxo3UYRB1si59zfo1_1280.png" style="width:280px;" alt="Signature" align="bottom">
@@ -343,6 +342,10 @@ function w3_close() {
     mySidebar.style.display = "none";
 }
 </script>
+
+
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-55942e200b33038e"></script>
+
 </body>
 <!--
   _                                                                    
