--- a/plus.html
+++ b/plus.html
@@ -1,3 +1,4 @@
+
 	
 
 <!--
@@ -17,7 +18,7 @@ Last Update: 21/4/2019-->
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<meta http-equiv="Refresh" content="4;url=https://robodayblog.wordpress.com/">
+<!-- <meta http-equiv="Refresh" content="4;url=https://robodayblog.wordpress.com/">  -->
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <!-- Raleway text Style --><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
@@ -27,7 +28,7 @@ Last Update: 21/4/2019-->
 body,h1,h5 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
 .bgimg {
-    background-image: url('https://78.media.tumblr.com/89b474d66bd1edba199e3e2b1879c963/tumblr_oxxaj71VNh1si59zfo1_1280.jpg');
+    background-image: url('https://66.media.tumblr.com/c939d2f1a6b4e5f1fcfd4204a355557f/tumblr_pbnlsrwxmW1si59zfo2_1280.jpg');
     min-height: 100%;
     background-position: center;
     background-size: cover;
@@ -63,18 +64,15 @@ body, html {height: 100%}
 
  <p><a href="http://a-papaspyrou.tk" class="w3-bar-item w3-black w3-button w3-wide"><i class="fa fa-home"></i>
 </a></p>
+ <p><a href="https://alexandroshub.github.io/soon.html"><button class="w3-button w3-black">blog</button></a></p>
 
-    <p><a href="https://alexandroshub.github.io/soon.html"><button class="w3-button w3-black">a+  _1_Nov17</button></a></p>
+    <p><a href="https://alexandroshub.github.io/soon.html"><button class="w3-button w3-black">TV</button></a></p>
+   
+   <p><a href="https://alexandroshub.github.io/soon.html"><button class="w3-button w3-black">soon</button></a></p>
    
   </div>
   
-   <div class="w3-display-middle">
-<h3>Sorry! We have moved!</h3> 
-<p>The new URL is: <a href="https://alexandroshub.github.io/index">https://robodayblog.wordpress.com/</a></p>
-<p>You will be redirected to the new address in five seconds.</p>
-<p>If you see this message for more than 4 seconds, please click on the link above!</p><br>
-<div class="loader"></div>
-</div>
+  
  
 </div>
 
