--- a/plus.html
+++ b/plus.html
@@ -1,6 +1,3 @@
-
-	
-
 <!--
 
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
@@ -62,20 +59,18 @@ body, html {height: 100%}
 </div>
 <div class="w3-display-topleft w3-container w3-xlarge">
 
- <p><a href="http://a-papaspyrou.tk" class="w3-bar-item w3-black w3-button w3-wide"><i class="fa fa-home"></i>
+ <p><a href="https://alexandroshub.github.io/index.html" class="w3-bar-item w3-black w3-button w3-wide"><i class="fa fa-home"></i>
 </a></p>
- <p><a href="https://alexandroshub.github.io/soon.html"><button class="w3-button w3-black">blog</button></a></p>
+ <p><a href="https://alexandroshub.github.io/plus-blog.html"><button class="w3-button w3-black">blog</button></a></p>
 
-    <p><a href="https://alexandroshub.github.io/soon.html"><button class="w3-button w3-black">TV</button></a></p>
+    <p><a href="https://alexandroshub.github.io/plus-tv.html"><button class="w3-button w3-black">TV</button></a></p>
    
    <p><a href="https://alexandroshub.github.io/soon.html"><button class="w3-button w3-black">soon</button></a></p>
    
   </div>
   
-  
- 
+   
 </div>
-
 
 <!-- That's all folks! --></body></html>
 <!-- Contact: a-papaspyrou@outlook.com.gr  |  Mob: 00306949452023 -->
