--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
 ▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
 Welcome in my personal website 100% HTML Hosted by Github
-Handcrafted With ❤ (CC)-By: Alexandros Papaspyrou V.14.07.19
+Handcrafted With ❤ (CC)-By: Alexandros Papaspyrou V.30.07.19
 ┌─┐┬  ┌─┐─┐ ┬┌─┐┌┐┌┌┬┐┬─┐┌─┐┌─┐┬ ┬┬ ┬┌┐  ┌─┐┬┌┬┐┬ ┬┬ ┬┌┐  ┬┌─┐
 ├─┤│  ├┤ ┌┴┬┘├─┤│││ ││├┬┘│ │└─┐├─┤│ │├┴┐ │ ┬│ │ ├─┤│ │├┴┐ ││ │
 ┴ ┴┴─┘└─┘┴ └─┴ ┴┘└┘─┴┘┴└─└─┘└─┘┴ ┴└─┘└─┘o└─┘┴ ┴ ┴ ┴└─┘└─┘o┴└─┘
@@ -23,7 +23,7 @@ body, html { height: 100%; line-height: 1.8;}
 /* Full height image header */
 .bgimg-1 {
     background-position: center; background-size: cover;
-    background-image: url("https://c1.staticflickr.com/4/3676/32780334312_14c9b2df93_o.jpg");
+    background-image: url("https://66.media.tumblr.com/800541baf530f163e9071eed1fd7006c/tumblr_pvgonb4oIW1si59zfo1_1280.jpg");
     min-height: 100%;
 }
 .w3-bar .w3-button { padding: 16px;}
@@ -57,8 +57,8 @@ body, html { height: 100%; line-height: 1.8;}
 
 <!-- Top menu -->
 <div class="w3-top">
-  <div id="myNavbar" style="max-width:100%;margin:auto; background:#1d1919">
-    <div class="w3-button w3-padding-16 w3-left w3-hover-red" onclick="w3_open()"><b><font color="#ebf0f6"><i class="fa fa-bars"></i></font></b></div>
+  <div id="myNavbar" style="max-width:100%;margin:auto; background:#0033668C">
+    <div class="w3-button w3-padding-16 w3-left w3-hover-black" onclick="w3_open()"><b><font color="#FF5733"><i class="fa fa-bars"></i></font></b></div>
    		<div class="w3-center w3-padding-16">
         <a href="https://alexandroshub.github.io/index.html" style="text-decoration: none" class="w3-bar-item  w3-wide">
         <b><font color="#ebf0f6">Papaspyrou</font></b>&nbsp; <img src="https://66.media.tumblr.com/fb287d1352f741032dd4b1e2a49ecc77/tumblr_phxnkoY5KO1si59zfo1_400.png" style="width:27px;" class="w3-hover-opacity">&nbsp; <b><font color="#ebf0f6">Alexandros</font></b></a> 
@@ -118,7 +118,8 @@ if (i < txt.length) {  document.getElementById("demo").innerHTML += txt.charAt(i
 </script> 
 -->
 </body>
-	<span class="w3-large">Ζούμε σε μια κοινωνία απολύτως εξαρτώμενη από την επιστήμη και την τεχνολογία,<br> όπου σχεδόν κανένας δεν ξέρει τίποτα για την επιστήμη και την τεχνολογία..</span>
+<span class="w3-large w3-hide-small" style="background-color: #0033669C; color: #FF5733; display: inline-block; padding: 3px 10px; font-weight: bold; border-radius: 5px;">Ζούμε σε μια κοινωνία απολύτως εξαρτώμενη από την επιστήμη και την τεχνολογία,<br> όπου σχεδόν κανένας δεν ξέρει τίποτα για την επιστήμη και την τεχνολογία.</span>
+
     <p><a href="https://robodayblog.wordpress.com/" class="w3-button w3-black w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off"><i class="fa fa-coffee"></i><b> BLOG</b></a></p>
   </div> 
  <span class="w3-hide-small">
@@ -137,7 +138,7 @@ if (i < txt.length) {  document.getElementById("demo").innerHTML += txt.charAt(i
 </div></span>
 </header>
 
-<div class="w3-center w3-padding-64"><span class="w3-xlarge w3-border-dark-grey w3-padding-16">" Άν κάναμε όλα όσα είμαστε ικανοί να κάνουμε, θα εκπλήσσαμε τον εαυτό μας." </span><br>Thomas Edison</div>
+<div class="w3-center w3-padding-64"><span class="w3-xlarge w3-border-dark-grey w3-padding-16"><i class="fa fa-quote-left"style="font-size:12px;color:#FF5733"></i> Άν κάναμε όλα όσα είμαστε ικανοί να κάνουμε, θα εκπλήσσαμε τον εαυτό μας.<i class="fa fa-quote-right"style="font-size:12px;color:#FF5733"></i></span><br>Thomas Edison</div>
 
 <!-- Promo Section - "We know design" -->
 <div class="w3-container w3-light-grey" style="padding:45px 16px"  id="port">
