--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ Handcrafted With ❤ (CC)-By: Alexandros Papaspyrou V.30.07.19
 <html>
 <title>Papaspyrou | index</title>
 <link rel="icon" href="https://78.media.tumblr.com/1a28f3759c3dcb54570d754893844188/tumblr_p2qvm8VJG21si59zfo1_400.png" type="image/png">
+	<head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -28,7 +29,11 @@ body, html { height: 100%; line-height: 1.8;}
 }
 .w3-bar .w3-button { padding: 16px;}
 </style>
+		</head>
 <body>
+<!-- Appzi: Capture Insightful Feedback -->
+<script async src="https://app.appzi.io/bootstrap/bundle.js?token=g7Yon"></script>
+<!-- End Appzi -->
 <!--  ////////////////////////// messenger_platform  ////////////////////////// --> <!-- Load Facebook SDK for JavaScript -->
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
