--- a/plus.html
+++ b/plus.html
@@ -1,3 +1,4 @@
+
 <!--
 
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
@@ -10,8 +11,8 @@ Last Update: 21/4/2019-->
 
 <!DOCTYPE html>
 <html>
-<title>Papaspyrou Alexandros</title>
-<link rel="icon" href="https://68.media.tumblr.com/244dfa6be45405237a64e5a056d7bd59/tumblr_ooi2q2AWTT1si59zfo2_1280.png" type="image/png">
+<title>Papaspyrou | plus</title>
+<link rel="icon" href="https://78.media.tumblr.com/1a28f3759c3dcb54570d754893844188/tumblr_p2qvm8VJG21si59zfo1_400.png" type="image/png">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -54,6 +55,9 @@ body, html {height: 100%}
 <body>
 
 <div class="bgimg w3-display-container w3-text-white">
+  <div class="w3-display-middle w3-jumbo w3-text-black">
+    <p>tech+plus</p>
+  </div>
 <div class="w3-display-topright w3-container w3-xlarge">
 <p><a href="https://alexandroshub.github.io/next.html" class="w3-bar-item w3-black w3-button w3-wide"><i class="fa fa-arrow-right"></i></a>
 </div>
