--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,6 @@
 
 
+
 <!--
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
@@ -29,7 +30,7 @@ body, html {
     background-position: center;
     background-size: cover;
     background-image: url("https://66.media.tumblr.com/a28d0e003dc51bc821c3ffac661a9702/tumblr_pbnlsrwxmW1si59zfo9_1280.png");
-    min-height: 75%;
+    min-height: 55%;
 }
 .menu {
     display: none;
@@ -48,24 +49,10 @@ body, html {
 <div class="fb-customerchat"
   attribution=setup_tool
   page_id="1610585155641169"
-  theme_color="#A9A9A9"
-  logged_in_greeting="Hi! How can i help you?"
-  logged_out_greeting="Hi! How can i help you?">
+  theme_color="#283E4A">
 </div>
 <!--  ////////////////////////// messenger_platform  ////////////////////////// -->   
 <!-- ////////////////////////// Navbar ////////////////////////// -->
-<!-- Top menu -->
-
-<!-- Top menu -->
-<div class="w3-top">
-  <div id="myNavbar" style="max-width:100%;margin:auto; background:#1d1919">
-    <div class="w3-button w3-padding-16 w3-left w3-hover-red" onclick="w3_open()"><b><font color="#ebf0f6"><i class="fa fa-bars"></i></font></b></div>
-   		<div class="w3-center w3-padding-16">
-        <a href="https://alexandroshub.github.io/index.html" style="text-decoration: none" class="w3-bar-item  w3-wide">
-        <b><font color="#ebf0f6">Papaspyrou</font></b>&nbsp; <img src="https://66.media.tumblr.com/fb287d1352f741032dd4b1e2a49ecc77/tumblr_phxnkoY5KO1si59zfo1_400.png" style="width:27px;" class="w3-hover-opacity">&nbsp; <b><font color="#ebf0f6">Alexandros</font></b></a> 
-    </div>
-  </div>
-</div>
 
 <!--
 
@@ -87,6 +74,18 @@ body, html {
  </div>  
 </div>
 -->
+
+<!-- Top menu -->
+<div class="w3-top">
+  <div id="myNavbar" style="max-width:100%;margin:auto; background:#283E4A">
+    <div class="w3-button w3-padding-16 w3-left w3-hover-black" onclick="w3_open()"><b><font color="#FF5733"><i class="fa fa-bars"></i></font></b></div>
+   		<div class="w3-center w3-padding-16">
+        <a href="https://alexandroshub.github.io/index.html" style="text-decoration: none" class="w3-bar-item  w3-wide">
+        <b><font color="#ebf0f6">Papaspyrou</font></b>&nbsp; <img src="https://66.media.tumblr.com/fb287d1352f741032dd4b1e2a49ecc77/tumblr_phxnkoY5KO1si59zfo1_400.png" style="width:27px;" class="w3-hover-opacity">&nbsp; <b><font color="#ebf0f6">Alexandros</font></b></a> 
+    </div>
+  </div>
+</div>
+
 <!-- Sidebar on small screens when clicking the menu icon -->
 <nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-top" style="display:none" id="mySidebar">
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16 w3-hover-red"><i class="fa fa-times-circle"></i> &nbsp;  Close</a>
@@ -116,14 +115,16 @@ function w3_close() {mySidebar.style.display = "none";} </script>
 <span class="w3-tag w3-red w3-hide-medium">@Coding</span>
 <span class="w3-tag w3-red w3-hide-medium">@Projects</span>
  </div>
-  <div class="w3-display-middle w3-center">
+  <div class="w3-display-middle w3-center ">
 
-	<span class="w3-text-white w3-hide-small" style="font-size:130px">#Portfolio</span>
-    <span class="w3-text-white w3-hide-large w3-hide-medium" style="font-size:80px">#Portfolio</span>
+
+	<span class="w3-text-white w3-hide-small" style="font-size:130px">
+    <b><font color="#FF5733">/</font></b>Portfolio</span>
+    <span class="w3-text-white w3-hide-large w3-hide-medium" style="font-size:80px"> <b><font color="#FF5733">/</font></b>Portfolio</span>
 
   </div>
   <div class="w3-display-bottomright w3-center w3-padding-large">
-    <span class="w3-text-white">Ημερομηνία τελευταίας τροποποίησης: 8.6.2019</span>
+    <span class="w3-text-white">Ημερομηνία τελευταίας τροποποίησης: 30.08.2019</span>
   </div>
 </header>
 
