--- a/about.html
+++ b/about.html
@@ -1,3 +1,4 @@
+
 <!-- ToU HTML  V.08.07.19 -->
 
 <!--
@@ -29,7 +30,7 @@ body, html {
     background-position: center;
     background-size: cover;
     background-image: url("https://66.media.tumblr.com/4b620392bb4bef6e318f179af05948f0/tumblr_oz7c9bifSb1si59zfo9_1280.jpg");
-    min-height: 75%;
+    min-height: 55%;
 }
 .menu {
     display: none;
@@ -40,14 +41,15 @@ body, html {
 
 <!-- Top menu -->
 <div class="w3-top">
-  <div id="myNavbar" style="max-width:100%;margin:auto; background:#1d1919">
-    <div class="w3-button w3-padding-16 w3-left w3-hover-red" onclick="w3_open()"><b><font color="#ebf0f6"><i class="fa fa-bars"></i></font></b></div>
+  <div id="myNavbar" style="max-width:100%;margin:auto; background:#283E4A">
+    <div class="w3-button w3-padding-16 w3-left w3-hover-black" onclick="w3_open()"><b><font color="#FF5733"><i class="fa fa-bars"></i></font></b></div>
    		<div class="w3-center w3-padding-16">
         <a href="https://alexandroshub.github.io/index.html" style="text-decoration: none" class="w3-bar-item  w3-wide">
         <b><font color="#ebf0f6">Papaspyrou</font></b>&nbsp; <img src="https://66.media.tumblr.com/fb287d1352f741032dd4b1e2a49ecc77/tumblr_phxnkoY5KO1si59zfo1_400.png" style="width:27px;" class="w3-hover-opacity">&nbsp; <b><font color="#ebf0f6">Alexandros</font></b></a> 
     </div>
   </div>
 </div>
+
 
 <!--
 
@@ -100,9 +102,10 @@ function w3_close() {mySidebar.style.display = "none";} </script>
  </div>
   <div class="w3-display-middle w3-center">
 
-	<span class="w3-text-white w3-hide-small" style="font-size:130px">#About</span>
-    <span class="w3-text-white w3-hide-large w3-hide-medium" style="font-size:80px">#About</span>
-
+<span class="w3-text-white w3-hide-small w3-hide-medium" style="font-size:60px">
+    <b><font color="#FF5733">/</font></b>Privacy Statement & Terms of Use</span>
+    <span class="w3-text-white w3-hide-large " style="font-size:30px"> <b><font color="#FF5733">/</font></b>Privacy Statement & Terms of Use</span>
+    
   </div>
   <div class="w3-display-bottomright w3-center w3-padding-large">
     <span class="w3-text-white">Ημερομηνία τελευταίας τροποποίησης: 08.07.2019</span>
@@ -352,9 +355,11 @@ function w3_close() {mySidebar.style.display = "none";} </script>
 
     <h5 class="w3-center w3-padding-64">
    <span class="w3-tag w3-wide">DATA</span></h5>
-<br><b>Ποια δεδομένα συλλέγουμε</b>   
-    <p>Το alexandroshub δε συλλέγει και κατ' επέκταση δεν επεξεργάζεται τα προσωπικά δεδομένα των αναγνωστών του. Παρ' όλα αυτά υπάρχουν τρίτες υπηρεσίες στη σελίδα που μπορεί να το κάνουν.</p>
-    
+   
+   <span class="w3-large w3-center" style="background-color: #003366; color: white; display: inline-block; padding: 3px 10px; font-weight: bold; border-radius: 5px;">Το alexandroshub δε συλλέγει και κατ' επέκταση δεν επεξεργάζεται τα προσωπικά σας δεδομένα.</span>
+
+<p>Παρ' όλα αυτά υπάρχουν τρίτες υπηρεσίες στη σελίδα που μπορεί να το κάνουν.</p>
+
 <br><b>Οι υπηρεσίες που χρησιμοποιούνται είναι οι εξής:</b>
 <br><b>GitHub</b>: Ο χώρος που φιλοξενείται το alexandroshub.github.io
 <br><b>Adsense</b>: Ο πάροχος των διαφημίσεων.
