--- a/links2.html
+++ b/links2.html
@@ -342,7 +342,9 @@ function w3_close() {mySidebar.style.display = "none";} </script>
         <a href="https://pixlr.com/">Pixlr</a> | 
     	<a href="http://100widgets.com/js/2.htm">link</a> | 
 		<a href="https://www.picmonkey.com/">picmonkey</a> | 
-		<a href="https://www.befunky.com/">befunky</a> |        
+		<a href="https://www.befunky.com/">befunky</a> |        \
+	  
+	  https://www.pdfescape.com/windows/
     
 <br><span class="w3-tag w3-green">PUAS</span><br> 
 		<a href="http://auto.teipir.gr/">auto</a>  |  
