--- a/cv.html
+++ b/cv.html
@@ -37,9 +37,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Open Sans", sans-serif}
 <div class="fb-customerchat"
   attribution=setup_tool
   page_id="1610585155641169"
-  theme_color="#A9A9A9"
-  logged_in_greeting="Hi! How can i help you?"
-  logged_out_greeting="Hi! How can i help you?">
+  theme_color="#283E4A"
 </div>
 <!--  ////////////////////////// messenger_platform  ////////////////////////// -->    
 
