--- a/cv.html
+++ b/cv.html
@@ -229,7 +229,9 @@ Read more</span>
 <p>
 <span class="w3-tag w3-small w3-theme-d5">ΑΕΙ Πειραιά ΤΤ</span>
 <br>Ημερίδα με θέμα: Personal Protective Equipment. 
-<br>Ημερίδα & Workshop με θέμα: Μεταφορά τεχνολογίας Από την έρευνα στη βιομηχανία & workshop «Παράγοντες επιτυχίας στη μεταφορά τεχνολογίας». 
+<br>Ημερίδα & Workshop με θέμα: Μεταφορά τεχνολογίας Από την έρευνα στη βιομηχανία & workshop «Παράγοντες επιτυχίας στη μεταφορά τεχνολογίας».
+<a href="http://www.teipir.gr/index.php/el/2013-06-17-12-27-13/2013-08-27-08-01-28/2013-06-18-06-49-59/item/download/267_c62ff8d6950849166e6172112669425b" style="text-decoration:none;">
+<span class="w3-tag w3-small w3-theme-l3">link</span></a>
 <br>Ημερίδα με θέμα: Personal Protective Equipment και Lifeguard & First Aid. 
 <br>Ημερίδα Καινοτομίας και Επιχειρηματικότητας 2014. Ημερίδα με θέμα: Ηλεκτροκίνηση στην Ελλάδα. <br>Ημερίδα με θέμα: Ανοικτό Λογισμικό Android-Mobility
 <p>          
