--- a/tss.html
+++ b/tss.html
@@ -1,4 +1,4 @@
-<!-- 2/2/18
+<!-- 
 
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
@@ -15,6 +15,7 @@ Handcrafted With ❤ By: Alexandros Papaspyrou
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 body,h1,h5 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
@@ -29,12 +30,18 @@ body, html {height: 100%}
 
 <div class="bgimg w3-display-container w3-text-white">
   <div class="w3-display-middle w3-jumbo">
-    <p>τέκ σολούσιονς</p>
+    <p>Tech Support &Solutions</p> 
+
   </div>
   <div class="w3-display-topleft w3-container w3-xlarge">
-  <p><button onclick="document.getElementById('links').style.display='block'" class="w3-button w3-black">σούν</button></p>
+  <p>
+  <button onclick="document.getElementById('links').style.display='block'" class="w3-button w3-black"><i class="fa fa-bars"></i></button>
+  <button class="w3-button w3-black"><img src="https://66.media.tumblr.com/4274e751a7e37a44163346c2f5a85e7d/tumblr_pxnn87AzrB1si59zfo1_540.png" style="width:150px;"></button></p>
   </div>
+  
   <div class="w3-display-bottomleft w3-container">
+      <p>Η συγκεκριμένη ενότητα ενότητα είναι υπό κατασκευή. 
+Για την ώρα παρέχεται η δυνατότητα επικοινωνίας με chat/call/videocall(δες περισσότερα) καθώς και ιδέες ή λύσεις που βρίσκονται στο Blog.</p>
     <p class="w3-large"></p>
   </div>
 </div>
@@ -49,9 +56,8 @@ body, html {height: 100%}
 <!-- ================================================================  -->
 
 <!-- ================================================================  -->  
-
-</div>
-</div>
+		</div>
+	</div>
 </div>
 
 </body>
