--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-
 <!--
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
 ▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
 Welcome in my personal website 100% HTML Hosted by Github
-Handcrafted With ❤ (CC)-By: Alexandros Papaspyrou V.04.08.19
+Handcrafted With ❤ (CC)-By: Alexandros Papaspyrou V.10.09.19
 ┌─┐┬  ┌─┐─┐ ┬┌─┐┌┐┌┌┬┐┬─┐┌─┐┌─┐┬ ┬┬ ┬┌┐  ┌─┐┬┌┬┐┬ ┬┬ ┬┌┐  ┬┌─┐
 ├─┤│  ├┤ ┌┴┬┘├─┤│││ ││├┬┘│ │└─┐├─┤│ │├┴┐ │ ┬│ │ ├─┤│ │├┴┐ ││ │
 ┴ ┴┴─┘└─┘┴ └─┴ ┴┘└┘─┴┘┴└─└─┘└─┘┴ ┴└─┘└─┘o└─┘┴ ┴ ┴ ┴└─┘└─┘o┴└─┘
@@ -25,7 +24,7 @@ body, html { height: 100%; line-height: 1.8;}
 /* Full height image header */
 .bgimg-1 {
     background-position: center; background-size: cover;
-    background-image: url("https://66.media.tumblr.com/800541baf530f163e9071eed1fd7006c/tumblr_pvgonb4oIW1si59zfo1_1280.jpg");
+    background-image: url("https://66.media.tumblr.com/e275be333ccf5abfb80f288abece4434/tumblr_oz7c9bifSb1si59zfo10_1280.png");
     min-height: 100%;
 }
 .w3-bar .w3-button { padding: 16px;}
@@ -63,18 +62,56 @@ body, html { height: 100%; line-height: 1.8;}
 
 <!-- Top menu -->
 <div class="w3-top">
-  <div id="myNavbar" style="max-width:100%;margin:auto; background:#0033668C">
-    <div class="w3-button w3-padding-16 w3-left w3-hover-black" onclick="w3_open()"><b><font color="#FF5733"><i class="fa fa-bars"></i></font></b></div>
-   		<div class="w3-center w3-padding-16">
-        <a href="https://alexandroshub.github.io/index.html" style="text-decoration: none" class="w3-bar-item  w3-wide">
-        <b><font color="#ebf0f6">Papaspyrou</font></b>&nbsp; <img src="https://66.media.tumblr.com/fb287d1352f741032dd4b1e2a49ecc77/tumblr_phxnkoY5KO1si59zfo1_400.png" style="width:27px;" class="w3-hover-opacity">&nbsp; <b><font color="#ebf0f6">Alexandros</font></b></a> 
-    </div>
+  <div id="myNavbar" style="max-width:100%;margin:auto;">
+    <div class="w3-button w3-padding-16 w3-left w3-hover-black" onclick="w3_open()"><b><font color="orange"><i class="fa fa-bars"></i></font></b></div>
+         <a href="https://alexandroshub.github.io/contact.html" class="w3-button w3-padding-16 w3-hide-small w3-right w3-hover-black"><b><font color="orange"><i class="fa fa-envelope"></i>  </font></b></a>
+         
+        
+   		<div class="w3-padding-16">
+<img src="https://66.media.tumblr.com/4274e751a7e37a44163346c2f5a85e7d/tumblr_pxnn87AzrB1si59zfo1_540.png" style="width:150px;">
+  
+  
+    </div> 
   </div>
 </div>
 
+
+
+
+  
+
+<!-- Navbar (sit on top) 
+<div class="w3-top">
+  <div class="w3-bar" id="myNavbar">
+<a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large w3-right" href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+
+<a href="https://alexandroshub.github.io/index"></a>&nbsp; 
+    <a href="#about" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> ABOUT</a>
+    <a href="#portfolio" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> PORTFOLIO</a>
+    <a href="#contact" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-plus-circle"></i> PLUS</a>
+    <a href="https://m.me/papaspyrou.alexandros" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-blue">
+      <i class="fa fa-comments-o"></i>
+    </a>
+  </div>
+
+  <!-- Navbar on small screens ->
+  <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
+    <a href="#about" class="w3-bar-item w3-button" onclick="toggleFunction()"><i class="fa fa-user"></i> ABOUT</a>
+    <a href="#portfolio" class="w3-bar-item w3-button" onclick="toggleFunction()"><i class="fa fa-th"></i> PORTFOLIO</a>
+    <a href="#contact" class="w3-bar-item w3-button" onclick="toggleFunction()"><i class="fa fa-plus-circle"></i> PLUS</a>
+    <a href="https://m.me/papaspyrou.alexandros" class="w3-bar-item w3-button"><i class="fa fa-comments-o"></i> Messenger</a>
+  </div>
+</div>-->
+
+
+<!-- scripts --><script>
+// Change style of navbar on scroll
+window.onscroll = function() {myFunction()};
+function myFunction() {var navbar = document.getElementById("myNavbar"); if (document.body.scrollTop > 100 || document.documentElement.scrollTop > 100) { navbar.className = "w3-bar" + " w3-card" + " w3-animate-top" + " w3-black"; } else { navbar.className = navbar.className.replace(" w3-card w3-animate-top w3-black", ""); }}
+// Used to toggle the menu on small screens when clicking on the menu button
+function toggleFunction() { var x = document.getElementById("navDemo");  if (x.className.indexOf("w3-show") == -1) { x.className += " w3-show"; } else { x.className = x.className.replace(" w3-show", ""); }}
+</script>
 <!--
-
-
 <div class="w3-top">
   <div class="w3-bar w3-black w3-card" id="myNavbar">
   
@@ -101,10 +138,7 @@ body, html { height: 100%; line-height: 1.8;}
   <a href="https://alexandroshub.github.io/portfolio.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-orange"><i class="	fa fa-folder-open-o"></i>&nbsp;  Portfolio</a>
 	<a href="https://alexandroshub.github.io/cv.html" onclick="w3_close()"  class="w3-bar-item w3-button"><i class="fa fa-user-o"></i> &nbsp;  CV </a> 
 	<a href="https://alexandroshub.github.io/plus" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-purple"><i class="	fa fa-plus-circle"></i>  &nbsp; Plus</a> 
-    <a href="https://alexandroshub.github.io/links.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-teal"><i class="fa fa-link"></i>  &nbsp; Links</a> 
-        <a href="https://alexandroshub.github.io/contact.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-lime"><i class="fa fa-envelope-o"></i>  &nbsp; Contact</a> 
-    <hr>
-<a href="https://m.me/papaspyrou.alexandros" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-blue"><i class="fa fa-comments-o"></i> Messenger</a>
+    <a href="https://alexandroshub.github.io/contact.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-lime"><i class="fa fa-envelope-o"></i>  &nbsp; Contact</a> 
 <a href="https://alexandroshub.github.io/cono" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-pink"><i class="fa fa-connectdevelop fa-fw"></i> CoNo</a>
 </nav>
 
@@ -164,15 +198,15 @@ if (i < txt.length) {  document.getElementById("demo").innerHTML += txt.charAt(i
  .'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `.
  -->
    <h3>Coding Time.</h3>
-<div class="w3-row " style="padding-bottom:30px">
+<div class="w3-row " style="padding-bottom:16px">
 <font color="red">#</font><font color="blue">include </font>  
 <font color="green">"hello_world.h"</font>   
 <br><font color="blue">namespace</font> hello_world {  
 <br><br>std::string <font color="red">hello ()</font>
-<br>{ 
+{ 
 <br>return<font color="green"> "Hello, World!"; </font>
-<br>} 
-<br>}
+} 
+}
  <p><a href="https://alexandroshub.github.io/portfolio.html#code" class="w3-button w3-black"><i class="fa fa-th"> </i> Coding Projects</a></p>
 </div>
 <!-- 
