--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!--
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
@@ -180,16 +181,16 @@ if (i < txt.length) {  document.getElementById("demo").innerHTML += txt.charAt(i
 </div></span>
 </header>
 
-<div class="w3-center w3-padding-64"><span class="w3-xlarge w3-border-dark-grey w3-padding-16"><i class="fa fa-quote-left"style="font-size:12px;color:#FF5733"></i> Άν κάναμε όλα όσα είμαστε ικανοί να κάνουμε, θα εκπλήσσαμε τον εαυτό μας.<i class="fa fa-quote-right"style="font-size:12px;color:#FF5733"></i></span><br>Thomas Edison</div>
+<div class="w3-center w3-padding-32 w3-black"><span class="w3-xlarge w3-border-dark-grey w3-padding-16"><i class="fa fa-quote-left"style="font-size:12px;color:orange"></i> Άν κάναμε όλα όσα είμαστε ικανοί να κάνουμε, θα εκπλήσσαμε τον εαυτό μας.<i class="fa fa-quote-right"style="font-size:12px;color:orange"></i></span><br>Thomas Edison</div>
 
 <!-- Promo Section - "We know design" -->
 <div class="w3-container w3-light-grey" style="padding:45px 16px"  id="port">
   <div class="w3-row-padding"><br>
     <div class="w3-col m6">
    
-      <h3>About Me.</h3>
+      <h3><i class="fa fa-user-o"></i> About Me.</h3>
       <p>Γεννήθηκα και μεγάλωσα στην Αθήνα και από μικρός κατάλαβα το ενδιαφέρον μου για την επιστήμη, τις τεχνολογίες και την πληροφορική, για αυτό και επέλεξα να σπουδάσω και να ασχοληθώ με αυτό το αντικείμενο, αναζητώντας πάντα νέες ευκαιρίες και πάντα ψάχνοντας για καινοτομία.</p>
-    <p><a href="https://alexandroshub.github.io/cv.html" class="w3-button w3-black"><i class="fa fa-user-o"></i> CV</a> <a href="https://alexandroshub.github.io/cv.html" class="w3-button w3-blue"><i class="fa fa-linkedin w3-hover-opacity"></i></a></p>
+    <p><a href="https://alexandroshub.github.io/cv.html" class="w3-button w3-black"> CV</a> <a href="https://alexandroshub.github.io/cv.html" class="w3-button w3-blue"><i class="fa fa-linkedin w3-hover-opacity"></i></a></p>
      
     </div>
     <div class="w3-col m6 w3-hide-small">
@@ -197,7 +198,9 @@ if (i < txt.length) {  document.getElementById("demo").innerHTML += txt.charAt(i
    .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-. 
  .'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `.
  -->
-   <h3>Coding Time.</h3>
+   <h3>
+   <i class="fa fa-code"></i>
+   Coding Time.</h3>
 <div class="w3-row " style="padding-bottom:16px">
 <font color="red">#</font><font color="blue">include </font>  
 <font color="green">"hello_world.h"</font>   
@@ -237,7 +240,7 @@ if (i < txt.length) {  document.getElementById("demo").innerHTML += txt.charAt(i
 </div>
 <!-- end of Section "Statistics" -->
 <!-- MAIN Section //////////////////////////////////////////////////////////-->
-<div class="w3-center w3-padding-16">
+<div class="w3-center w3-padding-16 w3-black">
 	<div class="w3-row-padding">
 <!-- 1 -->    
 <div class="w3-col l3 m6 w3-margin-bottom">
@@ -283,7 +286,7 @@ Files & Publications</div>
 </div></div>
 
 </div>
-<center><p><a href="https://alexandroshub.github.io/portfolio.html#projects" class="w3-button w3-black "><i class="fa fa-th"> </i> More  Projects</a></p></center>
+<center><p><a href="https://alexandroshub.github.io/portfolio.html#projects" class="w3-button w3-orange "><i class="fa fa-th"> </i> More  Projects</a></p></center>
 </div>
 <!-- 
    .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-. 
@@ -349,17 +352,11 @@ Files & Publications</div>
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-16">
 <!-- top --> 
-<a href="#home" class="w3-button"><i class="fa fa-chevron-circle-up w3-margin-right"></i>Επιστροφή στην κορυφή</a>
-  <div class="w3-xlarge w3-section"></div>    
+<a href="#home" class="w3-button w3-hover-orange"><i class="fa fa-chevron-circle-up w3-margin-right"></i>Επιστροφή στην κορυφή</a>
+     
 
-  <!-- facebook -->
-  <a href="https://www.facebook.com/papaspyrou.a" title="Facebook"><i class="fa fa-facebook-f w3-hover-opacity">
-  </i></a> 
-  <!-- contact -->
-  <a href="https://alexandroshub.github.io/contact.html" title="Contact Me"><i class=" fa fa-envelope w3-hover-opacity">
-  </i></a> 
   | 
-  <!-- Signature --><img src= "https://78.media.tumblr.com/e3d4fac4931e6e1df6b3b85d53dae92b/tumblr_p0sxo3UYRB1si59zfo1_1280.png" style="width:280px;" alt="Signature" align="bottom">
+  <!-- Signature --><img src= "https://78.media.tumblr.com/e3d4fac4931e6e1df6b3b85d53dae92b/tumblr_p0sxo3UYRB1si59zfo1_1280.png" style="width:300px;" alt="Signature" align="bottom">
 
 </footer>
  
